Created a form element with id of 'survey-form'.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
             <h1 id="description">Gustat Survey Form</h1>
             <p><i>Thank you for taking the time to help us serve you better</i></p>
         </header>
+        <main>
+            <form id="survey-form" action="">
+                
+            </form>
+        </main>
         
     </body>
 </html>
