Created data field to collect name on the survey form.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </header>
         <main>
             <form id="survey-form" action="">
-                
+                <label for="customer-name"> Name <input placeholder="Enter your name" name="customer-name" id="customer-name" type="text" required></label>
             </form>
         </main>
         
