--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
         </header>
         <main>
             <form id="survey-form" action="">
-                <label for="customer-name"> Name <input placeholder="Enter your name" name="customer-name" id="customer-name" type="text" required></label>
+                <p>
+                    <label for="customer-name">Name</label>
+                    <input placeholder="Enter your name" name="customer-name" id="customer-name" type="text" required>
+                </p>
+                <p>
+                    <label for="customer-name"> Email </label>
+                    <input placeholder="Enter your email" name="customer-email" id="customer-email" type="email" required>
+                </p>
             </form>
         </main>
         
