Defined validation check for email.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </p>
                 <p>
                     <label for="customer-name"> Email </label>
-                    <input placeholder="Enter your email" name="customer-email" id="customer-email" type="email" required>
+                    <input  placeholder="Enter your email" name="customer-email" id="customer-email" type="email" pattern=".+@example\.com" required>
                 </p>
             </form>
         </main>
