Added input area for age.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
                     <label for="customer-name"> Email </label>
                     <input  placeholder="Enter your email" name="customer-email" id="customer-email" type="email" pattern=".+@example\.com" required>
                 </p>
+                <p>
+                    <label for="customer-age"> Age (optional) </label>
+                    <input  name="customer-age" id="customer-age" type="number" >
+                </p>
             </form>
         </main>
         
