Added validation checks to age input field.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </p>
                 <p>
                     <label for="customer-age"> Age (optional) </label>
-                    <input  name="customer-age" id="customer-age" type="number" >
+                    <input  name="customer-age" id="customer-age" type="number" min="18" max="100" >
                 </p>
             </form>
         </main>
