Created customers' diet options.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,21 @@
                     <label id="age-label" for="customer-age"> Age (optional) </label>
                     <input  name="customer-age" id="customer-age" type="number" min="18" max="100" >
                 </div>
+                <div class="form-data">
+                    <p> What option best describes your diet? </p>
+                    <select id="dropdown" name="diet" required="">
+                        <option disabled="" selected="" value="">Select diet</option>
+                        <option value="vegan">Vegan</option>
+                        <option value="vegetarian">Vegetarian</option>
+                        <option value="paleo">Paleo</option>
+                        <option value="low-carb">Low-carb</option>
+                        <option value="atkins">Atkins</option>
+                        <option value="intermittent-fasting">Intermittent fasting</option>
+                        <option value="mediterranean">Mediterranean </option>
+                        <option value="preferNo">Prefer not to say</option>
+                        <option value="other">Other</option>
+                    </select>
+                </div>
             </form>
         </main>
         
