Created radio buttons.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
                         <option value="other">Other</option>
                     </select>
                 </div>
+                <div class="form-data">
+                    <p>Would you recommend Gustat to a friend?</p>
+                    <label>
+                      <input name="customer-recommend" value="definitely" type="radio" class="input-radio" checked="">Definitely</label>
+                    <label>
+                      <input name="customer-recommend" value="maybe" type="radio" class="input-radio">Maybe</label>
+          
+                    <label><input name="customer-recommend" value="not-sure" type="radio" class="input-radio">Not sure</label>
+                </div>
             </form>
         </main>
         
