--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <p><i>Thank you for taking the time to help us serve you better</i></p>
         </header>
         <main>
-            <form id="survey-form" action="">
+            <form id="survey-form">
                 <div class="form-data">
                     <label id="name-label" for="customer-name">Name</label>
                     <input placeholder="Enter your name" name="customer-name" id="customer-name" type="text" required>
@@ -48,6 +48,15 @@
                       <input name="customer-recommend" value="maybe" type="radio" class="input-radio">Maybe</label>
           
                     <label><input name="customer-recommend" value="not-sure" type="radio" class="input-radio">Not sure</label>
+                </div>
+                <div class="form-data">
+                    <p>Any comments or suggestions?</p>
+                    <textarea id="comments" class="input-textarea" name="comment" placeholder="Enter your comment here..."></textarea>
+                </div>
+                <div class="form-group">
+                    <button type="submit" id="submit" class="submit-button">
+                      Submit
+                    </button>
                 </div>
             </form>
         </main>
