submit button and free text.

--- a/index.html
+++ b/index.html
@@ -73,6 +73,16 @@
                     <label><input name="prefer" value="pepper-soup" type="checkbox" class="input-checkbox">Pepper Soup</label>
                     <label><input name="prefer" value="ayamashe" type="checkbox" class="input-checkbox">Ayamashe</label>
                 </div>
+                <div class="form-data">
+                    <p>Any comments or suggestions?</p>
+                    <textarea id="comments" class="input-textarea" name="comment" placeholder="Enter your comment here..."></textarea>
+                </div>
+                <div class="form-data">
+                    <button type="submit" id="submit" class="submit-button">
+                      Submit
+                    </button>
+                </div>
+                
             </form>
         </main>
         
