--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="form-data">
                     <label id="email-label" for="customer-name"> Email </label>
-                    <input  class="form-control" placeholder="Enter your email" name="customer-email" id="email" type="email" pattern=".+@example\.com" required>
+                    <input  class="form-control" placeholder="Enter your email" name="customer-email" id="email" type="email" required>
                 </div>
                 <div class="form-data">
                     <label id="number-label" for="customer-age"> Age (optional) </label>
